# raytracer

./: .gitmodules  CMakeLists.txt  README.md
include/: ltc.inc  shader.hpp
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
shaders/: copy.glsl  diff.glsl  disp.glsl  frag.glsl  vert.glsl
src/: main.cpp
